No further changes? Works almost identically on ios and android. (Small ios keyboard view push up bug). Release Version 1.0.0(?)

--- a/Teachers_Pet/www/css/entryPageStyle.css
+++ b/Teachers_Pet/www/css/entryPageStyle.css
@@ -128,14 +128,9 @@ div.scroll.padding{
 }
 
 ion-slides{
-	margin-top: 5% !important;
-	height: 75% !important;
+	height: 79% !important;
 	width: 101% !important;
 	border-color: white;
-}
-
-div.swiper-pagination.swiper-pagination-clickable {
-	margin-bottom: 65%;
 }
 
 span.swiper-pagination-bullet.swiper-pagination-bullet {
